--- a/CrudMVC/CrudMVC.csproj
+++ b/CrudMVC/CrudMVC.csproj
@@ -224,6 +224,7 @@
     <Content Include="Views\Employee\Employee.cshtml" />
     <Content Include="Views\Shared\_CreateData.cshtml" />
     <Content Include="Views\Shared\_UpdateData.cshtml" />
+    <Content Include="Views\Employee\AddEmployee.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
